# Scou.tf

./: README.md  pyproject.toml  test.py
.github/workflows/: build.yaml
scoutf/: .gitignore  __init__.py  cli.py  scoutf.py
